--- a/react-app/src/css/navBarContainer.css
+++ b/react-app/src/css/navBarContainer.css
@@ -13,9 +13,14 @@
 }
 
 .navButton {
+    display: inline-block;
     margin-left: 2rem;
     margin-right: 2rem;
-    margin-bottom: 2rem;
-    color: white;
+    color: var(--header-color);
     text-decoration: none;
+    height: 5rem;
+    margin-bottom: 1rem;
+}
+.navButton:hover {
+    background-color: var(--button-hover-color);
 }
