--- a/react-app/src/css/navBarContainer.css
+++ b/react-app/src/css/navBarContainer.css
@@ -15,12 +15,10 @@
 .navButton {
     display: inline-block;
     height: 5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin: 0;
     color: var(--header-color);
     text-decoration: none;
     height: 5rem;
-    margin-bottom: 1rem;
 }
 .navButton:hover {
     background-color: var(--button-hover-color);
