--- a/react-app/src/css/mainPage.css
+++ b/react-app/src/css/mainPage.css
@@ -26,7 +26,7 @@
     margin-left: 25%;
     margin-top: 5rem !important;
     top: 5rem;
-    background-color: var(--main-bg-color);
+    background-color: var(--page-background);
 }
 
 .thirdCol {
