--- a/react-app/src/css/navBarContainer.css
+++ b/react-app/src/css/navBarContainer.css
@@ -24,5 +24,5 @@
     background-color: var(--button-color) !important;
 }
 .navButton:hover {
-    background-color: var(--button-hover-color) ;
+    background-color: var(--button-hover-color) !important;
 }
