--- a/react-app/src/css/followedByMe.css
+++ b/react-app/src/css/followedByMe.css
@@ -1,5 +1,52 @@
 
+
+.bigContainer {
+    margin-top: 5rem;
+    height: 40rem;
+}
+
 .followedByMeContainer {
+    position: relative;
+    
+    height: 100%;
+}
+
+.followedByMeContainer h2 {
+    text-align: center;
+}
+
+.followingList {
     width: 100%;
     border-left: 3px solid lightgray;
+    max-height: 70%;
+    overflow: auto;
+
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.followEntry {
+    margin: auto;
+}
+
+.followEntry {
+    width: 100%;
+    height: 3rem;
+    padding: 0.5rem;
+    
+}
+
+.followEntry span {
+    margin-left: 0.5rem;
+}
+
+.offline {
+    opacity: 0.5;
+}
+
+.userSmallImg {
+    max-height: 100%;
 }
