--- a/react-app/src/css/mainPage.css
+++ b/react-app/src/css/mainPage.css
@@ -1,7 +1,5 @@
 /*
-.body {
-    margin-left: 0px;
-}
+
 
 
 .navBar {
@@ -52,7 +50,9 @@
 }
 
 */
-
+.body {
+    background-color: var(--page-background);
+}
 .pageContainer {
     display: flex;
     column-gap: 10rem;
@@ -86,6 +86,7 @@
     padding: 2%;
     border: 1rem solid var(--page-background);
     background-color: var(--page-background);
+    min-height: 100vh;
 }
 .navBar {
     z-index: 100;
