--- a/react-app/src/css/feedPosts.css
+++ b/react-app/src/css/feedPosts.css
@@ -47,6 +47,8 @@
     padding: 0.5rem;
     background-color: var(--button-color);
     color: var(--main-bg-color);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .btn-viewPostButton{
