--- a/react-app/src/css/notificationsContainer.css
+++ b/react-app/src/css/notificationsContainer.css
@@ -1,15 +1,42 @@
-
-
 .bigContainer {
-    margin-top: 5rem;
-    height: 40rem;
+    margin-top: 0.5rem;
+    height: 100%;
 }
 
 .notificationsContainer {
     position: relative;
     height: 100%;
+    align-content: center;
 }
 
-.followedByMeContainer h2 {
+.notificationsContainer h2 {
     text-align: center;
+}
+
+.notificationsList {
+    width: 70%;
+    max-height: 70%;
+    overflow: auto;
+    align-items: center;
+
+    margin: 0;
+    margin-left: 6rem;
+    position: absolute;
+    top: 25%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.btn-createPostButton {
+    background-color: var(--page-background);
+    width: 100%;
+    height: 2.5rem;
+    margin-bottom: 2rem;
+    background-color: var(--button-color);
+    color: var(--text-color);
+}
+
+.btn-createPostButton:hover {
+    background-color: var(--button-hover-color);
+    color: var(--text-color);
 }
