--- a/react-app/src/css/followedByMe.css
+++ b/react-app/src/css/followedByMe.css
@@ -5,7 +5,6 @@
 }
 
 .followedByMeContainer {
-    position: relative;
     height: 100%;
 }
 
@@ -20,11 +19,6 @@
     align-items: center;
 
     margin: 0;
-    margin-left: 6rem;
-    position: absolute;
-    top: 40%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
 }
 
 .followEntry {
@@ -32,10 +26,9 @@
 }
 
 .followEntry {
-    width: 100%;
     height: 3rem;
     padding: 0.5rem;
-    
+    padding-left: 30%;
 }
 
 .followEntry span {
@@ -62,4 +55,7 @@
 .btn-searchFriendsButton:hover {
     background-color: var(--button-hover-color);
     color: var(--text-color);
+}
+.followedByMeContainer h2 {
+    top: 10%;
 }
