--- a/react-app/src/css/login.css
+++ b/react-app/src/css/login.css
@@ -1,4 +1,4 @@
-body {
+.loginDiv{
     background-image: url('../../public/background.jpeg'); /* Replace 'your-image-url.jpg' with the path to your image */
     background-size: cover; /* This property ensures that the background image covers the entire container */
     background-repeat: no-repeat; /* This property prevents the background image from repeating */
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .title {
@@ -32,7 +33,6 @@ body {
     margin-bottom: 1rem;
     margin-top: 1rem;
     width: 20rem;
-    margin-left: 20rem;
 }
 
 .passwordBox{
@@ -42,7 +42,6 @@ body {
     align-items: center;
     margin-bottom: 1rem;
     width: 20rem;
-    margin-left: 20rem;
 
 }
 .hashtag {
@@ -53,7 +52,7 @@ body {
     background-color: var(--button-color);
     color: var(--text-color);
     padding: 1rem;
-    margin-left: 25rem;
+
 
 }
 
