--- a/react-app/src/css/mainPage.css
+++ b/react-app/src/css/mainPage.css
@@ -51,7 +51,7 @@
 
 */
 .body {
-    background-color: var(--page-background);
+    background-color: var(--page-background) !important; 
 }
 .pageContainer {
     display: flex;
