--- a/react-app/src/css/notificationsContainer.css
+++ b/react-app/src/css/notificationsContainer.css
@@ -12,21 +12,33 @@
 .notificationsContainer h2 {
     text-align: center;
 }
-
+.containerTitle {
+    padding: 1px;
+}
 .notificationsList {
     width: 70%;
     max-height: 70%;
     overflow: auto;
     align-items: center;
-
-    margin: 0;
-    margin-left: 6rem;
+    margin-bottom: 0;
+    margin-top: 9rem;
+    margin-left: 3rem;
     position: absolute;
     top: 25%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
+.notification {
+    background-color: var(--page-background);
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border-radius: 10px;
+}
+.notificationTitle {
+    font-weight: bold;
+    color: var(--button-color)
+}
 .btn-createPostButton {
     background-color: var(--page-background);
     width: 100%;
