--- a/react-app/src/css/register.css
+++ b/react-app/src/css/register.css
@@ -61,3 +61,14 @@
     background-color: var(--button-hover-color);
     color: var(--text-color);
 }
+
+.changePage {
+    display: inline-flex;
+    padding: 2rem;
+}
+
+.changePageText {
+    color: white;
+    padding: 1rem;
+    font-size: 1rem;
+}
