picture fit & posts modifications

--- a/react-app/src/css/feedPosts.css
+++ b/react-app/src/css/feedPosts.css
@@ -12,12 +12,13 @@
 }
 
 .postPic {
-    height: 25rem;
-    width: 25rem;
+    height: 20rem;
+    width: 20rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding: 0.5rem;
+    object-fit: cover;
 }
 
 .postDetails {
